# CryptoVibeTrading

./: .gitignore  AGENTS.md  README.md
CryptoVibeTrade/: .env.example  .gitignore  ADMIN_GUIDE.md  Cargo.toml  DATABASE_SETUP.md  FENRIR_API.md  docker-compose.yml  test_fenrir.sh
CryptoVibeTrade/src/: app.rs  database.rs  lib.rs  main.rs  server.rs  types.rs
CryptoVibeTrade/src/Front_End/: landing.html
CryptoVibeTrade/src/components/: admin.rs  auth.rs  chart.rs  dashboard.rs  dragon.rs  landing.rs  mod.rs  whiteboard.rs
CryptoVibeTrade/src/routes/: mod.rs
CryptoVibeTrade/static/css/: app.css
