[package]
name = "cvt"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6", features = ["serde"] }
leptos_meta = { version = "0.6" }
leptos_router = { version = "0.6", features = ["hash"] }
leptos_axum = { version = "0.6" }
axum = { version = "0.7", features = ["json", "macros"] }
tower-http = { version = "0.5", features = ["fs"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
web-sys = { version = "0.3", features = ["Window", "SpeechSynthesis", "SpeechSynthesisUtterance"] }
wasm-bindgen = "0.2"