[package]
name = "cryptovibetrading"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6", features = ["serde"] }
leptos_meta = { version = "0.6" }
leptos_router = { version = "0.6" }
leptos_axum = { version = "0.6" }
axum = { version = "0.7", features = ["json", "macros"] }
tower-http = { version = "0.5", features = ["fs"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
web-sys = { version = "0.3", features = [
    "Window",
    "SpeechSynthesis",
    "SpeechSynthesisUtterance",
    "console",
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    "MouseEvent",
    "WheelEvent",
    "KeyboardEvent",
    "PointerEvent",
    "TouchEvent",
    "Element",
    "DomRect",
] }
wasm-bindgen = "0.2"
gloo-timers = "0.3"
gloo-net = { version = "0.5", features = ["websocket"] }
wasm-bindgen-futures = "0.4"
rand = "0.8"

# Database dependencies
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
argon2 = "0.5"

# Solana dependencies for NFT verification
solana-client = "2.0"
solana-sdk = "2.0"
bs58 = "0.5"